# mini-wallpaper

./: LICENSE  README-zh.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  wallpaper.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  events.rs  lib.rs  main.rs
src-tauri/src/commands/: app_setting.rs  backup.rs  collection.rs  error.rs  fullscreen.rs  mod.rs  monitor_config.rs  playback_cascade.rs  shortcut.rs  wallpaper.rs  wallpaper_window.rs
src-tauri/src/ctx/: db.rs  mod.rs  window_manager.rs
src-tauri/src/dto/: app_setting_dto.rs  backup_dto.rs  collection_dto.rs  mod.rs  monitor_config_dto.rs  shortcut_dto.rs  validated.rs  wallpaper_dto.rs  wallpaper_window_dto.rs
src-tauri/src/entities/: app_setting.rs  collection.rs  collection_wallpaper.rs  mod.rs  monitor_config.rs  playlist.rs  playlist_wallpaper.rs  wallpaper.rs
src-tauri/src/migration/: m001_create_wallpapers.rs  m002_create_collections.rs  m003_create_collection_wallpapers.rs  m004_create_monitor_configs.rs  m004_create_playlists.rs  m005_create_app_settings.rs  m005_create_playlist_wallpapers.rs  m006_create_monitor_configs.rs  m006_move_display_mode_to_app_settings.rs  m007_create_app_settings.rs  m008_alter_monitor_configs.rs  m009_add_active_to_monitor_configs.rs  mod.rs
src-tauri/src/platform/: fullscreen_detector.rs  mod.rs  tray.rs
src-tauri/src/platform/windows/: DESKTOP_EMBEDDER_TECH_DOC.md  desktop_embedder.rs  (+1 more)
src-tauri/src/runtime/: carousel.rs  fullscreen_detector.rs  mod.rs  scheduler.rs
src-tauri/src/services/: app_setting_service.rs  backup_service.rs  collection_service.rs  mod.rs  monitor_config_service.rs  timer_manager.rs  wallpaper_service.rs  wallpaper_window_service.rs
src-tauri/src/utils/: ffmpeg.rs  mod.rs  progress_io.rs  timer_registry.rs
(+109 files in other folders)
