[package]
name = "mini-wallpaper"
version = "1.0.0"
description = "Mini Wallpaper"
authors = ["you"]
license = "mit"
repository = "https://github.com/mi-saka10032/mini-wallpaper.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mini_wallpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
image = "0.25.10"
uuid = { version = "1.23.0", features = ["v4"] }
zip = "2"
walkdir = "2"
garde = { version = "0.22", features = ["derive"] }
futures = "0.3"
tauri-plugin-single-instance = "2.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
] }
